--- a/web/css/style.css
+++ b/web/css/style.css
@@ -88,6 +88,10 @@ code {
     width: 35% !important;
 }
 
+.mt-7 {
+    margin-top: 7rem !important;
+}
+
 .ml-10 {
     margin-left: 10px !important;
 }
@@ -138,7 +142,7 @@ code {
     cursor: pointer;
 }
 
-.icon-star, .icon-delete {
+.icon-edit, .icon-delete {
     cursor: pointer;
 }
 
